# hermit-engine

./: .gitignore  .gitmodules  .luarc.json  :w  CMakeLists.txt  Makefile  README.md  imgui.ini
assets/scripts/: Level1.lua
assets/tilemaps/: ._jungle.map  demo.map  desert.map  jungle.map
config/: config.toml
config/scenes/: sceneA.toml  sceneB.toml  sceneC.toml  sceneD.toml  sceneE.toml
libs/lua/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
scripts/: collisions.lua  collisons.lua  key_events.lua  main.lua  player.lua
scripts/utils/: collider.lua
src/: Game.cpp  Game.h  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h  TransformComponents.h
src/ECS/: ComponentInfoPool.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  Registry.cpp  Registry.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  KeyboardInputEvent.h  KeyboardPressEvent.h  KeyboardReleaseEvent.h
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Plugin/: DemoPlugin.cc  DemoPlugin.h  PluginComponentFactory.cpp  PluginComponentFactory.h  PluginEventFactory.cpp  PluginEventFactory.h  PluginEventFactoryList.cpp  PluginEventFactoryList.h  PluginInfo.h  PluginLoader.cpp  PluginLoader.h  PluginSystemInterface.h  SystemInfo.h  SystemInstance.h
src/Plugin/Components/: AnimationComponent.cpp  AnimationComponent.h  BoxColliderComponent.cpp  BoxColliderComponent.h  DemoComponent.cpp  DemoComponent.h  PlayerController.cpp  PlayerController.h  RigidBodyComponent.cpp  RigidBodyComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
src/Plugin/Events/: CollisionEvent.cpp  CollisionEvent.h  DemoEvent.cpp  DemoEvent.h  KeyboardPressEvent.cpp  KeyboardPressEvent.h  KeyboardReleaseEvent.cpp  KeyboardReleaseEvent.h
src/Plugin/Systems/: CollisionSystem.cc  CollisionSystem.h  DemoPlugin.cc  DemoPlugin.h  DemoPlugin2.cc  DemoPlugin2.h  KeyboardControlSystem.cc  KeyboardControlSystem.h  PluginAnimationSystem.cc  PluginAnimationSystem.h  PluginMovementSystem.cc  PluginMovementSystem.h  PluginRenderSystem.cc  PluginRenderSystem.h  RenderCollisionSystem.cc  RenderCollisionSystem.h
src/Plugin/Systems/PluginsToLoad/: demo.soclear  render.s
src/SceneLoader/: EntityCreate.lua  SceneLoader.cpp  SceneLoader.h
src/Systems/: AnimationSystem.cpp  AnimationSystem.h  CameraFollowSystem.cpp  CameraFollowSystem.h  CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageSystem.h  KeyboardMovementSystem.cpp  KeyboardMovementSystem.h  MovementSystem.cpp  MovementSystem.h  ProjectileEmitSystem.cpp  ProjectileEmitSystem.h  ProjectileKillSystem.cpp  ProjectileKillSystem.h  RenderCollisionSystem.cpp  RenderCollisionSystem.h  RenderGUISystem.cpp  RenderGUISystem.h  RenderHealthSystem.cpp  RenderHealthSystem.h  RenderSystem.cpp  RenderSystem.h  RenderTextLabelSystem.cpp  RenderTextLabelSystem.h  ScriptSystem.cpp  ScriptSystem.h
